<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="ngo">NGO</string>
    <string name="welcome_to_helpus">Welcome to HelpUs..</string>
    <string name="donation">Donation</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="loginhomepageimg">LoginHomePageImg</string>
    <string name="feedback">Feedback</string>
    <string name="history">History</string>
    <string name="help_now">Help Now!</string>
    <string name="donations">Donations</string>
    <string name="helped_to">Helped To</string>
    <string name="profile">Profile</string>
    <string name="donate">donate</string>
    <string name="todo">TODO</string>
    <string name="name">NAME :</string>
    <string name="email">EMAIL :</string>
    <string name="contact">CONTACT :</string>
    <string name="show">Show</string>
    <string name="back">BACK</string>
    <string name="name_of_user">NAME OF USER</string>
    <string name="email_of_user">EMAIL OF USER</string>
    <string name="contact_of_user">CONTACT OF USER</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login_as_user">Login as User</string>
    <string name="password">Password</string>
    <string name="name_of_organisation">name of organisation</string>
    <string name="contact_number">Contact Number</string>
    <string name="organisation">Organisation</string>
    <string name="refresh">Refresh</string>
    <string name="who_we_are">Who We are?</string>
    <string name="helpus">HelpUs</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="we_are_a_group_of_people_who_wants_help_the_society_the_same_society_from_which_we_got_such_a_inspiration_we_help_people_by_giving_them_funds_clothes_etc">We are a group of people who wants help the society.The same society from which we got such a inspiration.We help people by giving them Funds , Clothes etc.</string>
    <string name="rate_us">Rate Us</string>
    <string name="submit">Submit</string>
    <string name="rate_the_ngo">Rate the NGO</string>
    <string name="your_feedback_will_always_help_us_to_improve">Your Feedback will always help us to improve</string>

    <string-array name="Type">
        <item>Food</item>
        <item>Clothes</item>
        <item>Money</item>


    </string-array>
    <string name="title_activity_get_location">Map</string>
    <string name="title_activity_locate__person__org">Map</string>
</resources>

