<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/user_profile_background"
    tools:context=".Uprofile">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginTop="104dp"
        android:text="@string/name_of_user"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:text="@string/email_of_user"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:text="@string/contact_of_user"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/show"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/login_button"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/uprofile_back_button"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toEndOf="@+id/show"
        app:layout_constraintTop_toBottomOf="@+id/show"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="78dp"
        android:layout_height="0dp"
        android:text="@string/name"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:text="@string/email"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="78dp"
        android:layout_height="0dp"
        android:text="@string/contact"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="53dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

</androidx.constraintlayout.widget.ConstraintLayout>