<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfo">

    <EditText
        android:id="@+id/editText"
        android:layout_width="404dp"
        android:layout_height="194dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:text="@string/we_are_a_group_of_people_who_wants_help_the_society_the_same_society_from_which_we_got_such_a_inspiration_we_help_people_by_giving_them_funds_clothes_etc"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:text="@string/who_we_are"
        android:textColor="#1A1417"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="73dp"
        android:layout_height="30dp"
        android:text="@string/helpus"
        android:textAlignment="center"
        android:textColor="#1A1417"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginBottom="104dp"
        android:text="@string/version_1_0_0"
        android:textAlignment="center"
        android:textColor="#1A1417"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/textView12" />
</androidx.constraintlayout.widget.ConstraintLayout>