<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#fff"
tools:context=".OrganisationHome">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="408dp"
        android:layout_height="196dp"
        android:background="@drawable/image_mainmenu"
        android:contentDescription="@string/loginhomepageimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/mainmenu_top_image2" />

    <Button
        android:id="@+id/donations"
        android:layout_width="116dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@mipmap/donation"
        android:elevation="2dp"
        android:gravity="bottom"
        android:text="@string/donations"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:targetApi="lollipop" />

    <Button
    android:id="@+id/button1"
    android:layout_width="33dp"
    android:layout_height="31dp"
    android:layout_marginStart="230dp"
    android:layout_marginLeft="230dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/ngo_button_shape"
    android:drawableTop="@mipmap/about_us"
    android:translationZ="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/imageView4" tools:targetApi="lollipop" />

    <Button
        android:id="@+id/helpto"
        android:layout_width="116dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@mipmap/help_now"
        android:elevation="2dp"
        android:gravity="bottom"
        android:text="@string/helped_to"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="@+id/donations"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/orgprofile"
        app:layout_constraintTop_toBottomOf="@+id/orgprofile"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/orgfeedback"
        android:layout_width="116dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@mipmap/feedback_icon"
        android:elevation="2dp"
        android:gravity="bottom"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="@+id/orgprofile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/orgprofile"
        app:layout_constraintTop_toBottomOf="@+id/helpto"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/orglogout"
        android:layout_width="116dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@mipmap/logout"
        android:elevation="2dp"
        android:gravity="bottom"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="@+id/donations"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/donations"
        app:layout_constraintTop_toBottomOf="@+id/helpto"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/orgprofile"
        android:layout_width="116dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@mipmap/user"
        android:elevation="2dp"
        android:gravity="bottom"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        app:layout_constraintEnd_toStartOf="@+id/donations"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>