<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedback">

    <Button
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginBottom="56dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.842" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="242dp"
        android:layout_height="46dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="193dp"
        android:layout_height="47dp"
        android:text="@string/rate_the_ngo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.605" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="357dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_feedback_will_always_help_us_to_improve"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />
</androidx.constraintlayout.widget.ConstraintLayout>