<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_background2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/user_button"
        android:layout_width="263dp"
        android:layout_height="51dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="340dp"
        android:background="@drawable/user_button_shape"

        android:text="@string/user"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ngo_button"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"


        android:layout_marginTop="60dp"
        android:background="@drawable/ngo_button_shape"
        android:text="@string/organisation"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/user_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_button"
        app:layout_constraintTop_toBottomOf="@+id/user_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="51dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_to_helpus"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="223dp"
        android:layout_marginTop="36dp"
        android:background="@mipmap/logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/textView" /> -->
</androidx.constraintlayout.widget.ConstraintLayout>